--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.23.0",
     "next": "^12.0.8",
     "prism-theme-night-owl": "^1.4.0",
     "prismjs": "^1.26.0",
     "react": "^17.0.2",
     "react-bricks": "^3.2.8",
     "react-bricks-ui": "^0.3.20",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "stripe": "^8.203.0",
+    "use-shopping-cart": "^3.0.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
