--- a/package.json
+++ b/package.json
@@ -14,26 +14,33 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.23.0",
-    "micro": "^9.3.4",
-    "micro-cors": "^0.1.1",
-    "next": "^12.0.8",
-    "prism-theme-night-owl": "^1.4.0",
-    "prismjs": "^1.26.0",
-    "react": "^17.0.2",
-    "react-bricks": "^3.2.8",
-    "react-bricks-ui": "^0.3.20",
-    "react-dom": "^17.0.2",
-    "stripe": "^8.203.0",
-    "swr": "^1.2.2",
+    "@types/node" : "^17.0.18",
+    "@types/react" : "^17.0.39",
+    "autoprefixer" : "^10.4.2",
+    "concurrently" : "^7.0.0",
+    "micro-cors" : "^0.1.1",
+    "micro" : "^9.3.4",
+    "next" : "^12.1.0",
+    "postcss" : "^8.4.6",
+    "prism-theme-night-owl" : "^1.4.0",
+    "prismjs" : "^1.27.0",
+    "react-bricks-ui" : "^0.3.20",
+    "react-bricks" : "^3.2.11",
+    "react-dom" : "^17.0.2",
+    "react" : "^17.0.2",
+    "stripe" : "^8.203.0",
+    "swr" : "^1.2.2",
+    "tailwindcss" : "^3.0.23",
+    "typescript" : "^4.5.5",
     "use-shopping-cart": "^3.0.5"
   },
   "devDependencies": {
-    "@types/node": "^17.0.8",
-    "@types/react": "^17.0.38",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.13",
-    "typescript": "^4.5.4"
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.5.5"
   }
 }
